syntax = "proto3";

option go_package = "github.com/wilenceyao/humor-agent/api";

package api;

service HumorAgent {
  rpc Tts (TtsRequest) returns (TtsReply) {}
}

enum ErrorCode {
     SUCCESS = 0;
     // 参数类错误
     INVALID_PARAMETERS = 1;
     UNSUPPORTED_OPERATION = 2;
     // 内部错误
     INTERNAL_ERROR = 10;
     // 外部错误，20开头
     EXTERNAL_ERROR = 20;
 }

message BaseReply {
   ErrorCode code = 1;
   string msg = 2;
}

message BaseRequest {
   string traceId = 1;
}

message TtsRequest {
    BaseRequest req = 1;
    string text = 2;
}

message TtsReply {
    BaseReply reply = 1;
    string id = 2;
}